--- a/index.html
+++ b/index.html
@@ -5,15 +5,97 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header><img src="images/logo.png" alt="fitnessyello_logo"/></header>
-        <section id="home_banner"></section>
-        <section id="activities"></section>
-        <section id="coaches"></section>
-        <section id="testimonials"></section>
-        <section id="calltoaction"></section>
-        <section id="arguments"></section>
-        <section id="offers"></section>
+        <header><img src="images/logo_fitnessyello.png" alt="fitnessyello_logo"/>
+            <nav>
+                <ul>
+                    <li>Activités</li>
+                    <li>Coaches</li>
+                    <li>Formules</li>
+                    <li>Contact</li>
+                    <li>Actualité</li>
+                </ul>
+            </nav>
+            <div>
+                <div id="cta_btn"></div>
+                <div id="phone_number">06.12.34.56.78</div>
+            </div>
+        </header>
+        <section id="home_banner">
+            <h1>Un esprit sain dans un corps sain</h1>
+            <h2>Maintenez votre forme toute l'année chez Fitness Yello !</h2>
+            <p>Auctor sem massa mattis sem at interdum magna augue eget diam
+                vestibulum ante ipsum primis in faucibus orci luctus.</p>
+            <a href="#" class="btn_orange">Je teste une séance gratuite</a>
+            <a href="#" class="btn_blue">Voir nos activités</a>
+        </section>
+
+        <section id="activities">
+            <h2>Nos activités</h2>
+            <article><div><h3>Boxe</h3></div>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+            </article>
+            <article><div><h3>Fitness</h3></div>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+            </article>
+            <article><div><h3>Crossfit</h3></div>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+            </article>
+        </section>
+
+        <section id="coaches">
+            <h2>Nos coaches</h2>
+            <article><div><h3>Jérôme <span style="text-transform: uppercase;">Mazuret</span></h3><h4>Musculation & Boxe Trainer</h4></div></article>
+            <article><div><h3>Julia <span style="text-transform: uppercase;">Modiano</span></h3><h4>Crossfit & Fitness Trainer</h4></div></article>
+            <article><div><h3>Rémy <span style="text-transform: uppercase;">Tobin</span></h3><h4>Crossfit & Fitness Trainer</h4></div></article>
+            <article><div><h3>Églantine <span style="text-transform: uppercase;">Laroche</span></h3><h4>Fitness Trainer</h4></div></article>
+        </section>
+
+        <section id="testimonials">
+            <article>
+                <ul>
+                    <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
+                    <li><p>Anaïs <span style="text-transform:uppercase">Laurent</span></p></li>
+                </ul>
+            </article>
+            <article>
+                <ul>
+                    <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></li>
+                    <li><p>Graziella <span style="text-transform:uppercase">Ricci</span></p></li>
+                </ul>
+            </article>
+            <article>
+                <ul>
+                    <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
+                    <li><p>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
+                </ul>
+            </article>
+        </section>
+
+        <section id="calltoaction">
+            <h2>Surpassez vos limites dès maintenant !</h2>
+            <h3>Passez à l'action en profitant de nos offres taillées selon vos besoins</h3>
+        </section>
+
+        <section id="arguments">
+            <h2>Fitness Yello en chiffres</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam </p>
+            <ul>
+                <li>600+<br>Membres</li>
+                <li>4<br>Coaches</li>
+                <li>226<br>Cours donnés</li>
+                <li>98%<br>De clients satisfaits</li>
+            </ul>
+        </section>
+
+        <section id="offers">
+            <h2>Nos offres</h2>
+            <article><a href="#">S'abonner</a></article>
+            <article><a href="#">S'abonner</a></article>
+            <article><a href="#">S'abonner</a></article>
+        </section>
+
         <section id="contact"></section>
+
         <footer></footer>
     </body>
 </html>
