Page HTML complète

--- a/index.html
+++ b/index.html
@@ -89,13 +89,79 @@
 
         <section id="offers">
             <h2>Nos offres</h2>
-            <article><a href="#">S'abonner</a></article>
-            <article><a href="#">S'abonner</a></article>
-            <article><a href="#">S'abonner</a></article>
+            <article>
+                <p>Satisfait ou remboursé</p>
+                <h3>Formule First</h3>
+                <h4>Une activité au choix</h4>
+                <h5><strong>29€</strong>/mois</h5>
+                <a href="#">S'abonner</a>
+            </article>
+            <article>
+                <p>Une semaine offerte !</p>
+                <h3>Formule Duo</h3>
+                <h4>Deux activités au choix</h4>
+                <h5><strong>49€</strong>/mois</h5>
+                <a href="#">S'abonner</a>
+            </article>
+            <article>
+                <p>Une seamine offerte et suivi personnalisé !</p>
+                <h3>Formule Premium</h3>
+                <h4>Toutes les activités sans limites</h4>
+                <h5><strong>69€</strong>/mois</h5>
+                <a href="#">S'abonner</a>
+            </article>
         </section>
 
-        <section id="contact"></section>
+        <section id="contact">
+            <h2>Contactez-nous !</h2>
+            <div>
+                <form>
+                    <label for="name">Nom complet</label><br>
+                    <input type="text" name="name" placeholder="Entrez votre nom et prénom"><br>
+                    <label for="choix">Vous demandez</label><br>
+                    <input type="radio" id="essai" name="choix" value="essai" checked>
+                    <label for="essai">Essai gratuit</label>
+                    <input type="radio" id="question" name="choix" value="question">
+                    <label for="essai">Une question</label>
+                    <input type="radio" id="aide" name="choix" value="aide">
+                    <label for="aide">De l'aide</label><br>
+                    <label for="email">E-mail</label><br>
+                    <input type="text" name="email" placeholder="Entrez votre e-mail"><br>
+                    <label for="message">Message</label><br>
+                    <textarea id="message" name="message" rows="5" cols="33">Entrez votre message ici</textarea><br>
+                    <input type="submit" value="envoyer">
+                </form>
+            </div>
+            <div>
+                <h3>Où nous trouver ?</h3>
+                <ul>
+                    <li>52, rue de la Course<br>33 000 Bordeaux</li>
+                    <li>06.12.34.56.78</li>
+                </ul>
+            </div>
+        </section>
 
-        <footer></footer>
+        <footer>
+            <h2>Nous suivre sur les réseaux sociaux</h2>
+            <nav>
+                <ul>
+                    <li>Activités</li>
+                    <li>Coaches</li>
+                    <li>Formules</li>
+                    <li>Contact</li>
+                    <li>Actualité</li>
+                </ul>
+            </nav>
+            <nav>
+                <ul>
+                    <li>CGU</li>
+                    <li>CGV</li>
+                    <li>Mentions légales</li>
+                    <li>Plan du site</li>
+                </ul>
+            </nav>
+        <p>Copyright 2020 - Tous droits réservés</p>
+        <p>Crée avec force par <a href="https://trmouv.fr/" target="_blank" alt="Site TR Mouv">TR Mouv</a></p>
+        </footer>
     </body>
 </html>
