modif sections activites & coaches

--- a/index.html
+++ b/index.html
@@ -36,26 +36,61 @@
         </section>
 
         <section class="activities">
-            <h2 style="text-align: center;">Nos activités</h2>
-            <div class="parent_activity">
-                <div class="child_activity"><article><div><h3>Boxe</h3></div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                </article></div>
-                <div class="child_activity"><article><div><h3>Fitness</h3></div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                </article></div>
-                <div class="child_activity"><article><div><h3>Crossfit</h3></div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                </article></div>
+                <h2 style="text-align: center;">Nos activités</h2>
+                <div class="flex_3">
+                <article>
+                    <div class="img_activite"><img src="images/boxe_activite.jpg" alt="boxe" height="300px" width="100%" /></div>
+                    <div class="box_contain">
+                    <h3>Boxe</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
+                </article>
+                <article>
+                    <div class="img_activite"><img src="images/fitness_activite.jpg" alt="boxe" height="300px" width="100%"/></div>
+                    <div class="box_contain">
+                    <h3>Fitness</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
+                </article>
+                <article>
+                    <div class="img_activite"><img src="images/crossfit_activite.jpg" alt="boxe" height="300px" width="100%"/></div>
+                    <div class="box_contain">
+                    <h3>Crossfit</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
+                </article>
+                </div>
             </div>
         </section>
 
         <section class="coaches">
             <h2>Nos coaches</h2>
-            <article><div><h3>Jérôme <span style="text-transform: uppercase;">Mazuret</span></h3><h4>Musculation & Boxe Trainer</h4></div></article>
-            <article><div><h3>Julia <span style="text-transform: uppercase;">Modiano</span></h3><h4>Crossfit & Fitness Trainer</h4></div></article>
-            <article><div><h3>Rémy <span style="text-transform: uppercase;">Tobin</span></h3><h4>Crossfit & Fitness Trainer</h4></div></article>
-            <article><div><h3>Églantine <span style="text-transform: uppercase;">Laroche</span></h3><h4>Fitness Trainer</h4></div></article>
+            <div class="grid_coaches">
+            <article id="jerome_mazuret"><div><h3>Jérôme <span style="text-transform: uppercase;">Mazuret</span></h3><h4>Musculation & Boxe Trainer</h4>
+            <ul class="social_ico_coaches">
+                <li><img src="ico/fb.png" width="40px"/></li>
+                <li><img src="ico/tw.png" width="40px"/></li>
+                <li><img src="ico/ig.png" width="40px"/></li>
+                <li><img src="ico/tk.png" width="40px"/></li>
+            </ul>
+            </div>
+            </article>
+            <article id="julia_modiano"><div><h3>Julia <span style="text-transform: uppercase;">Modiano</span></h3><h4>Crossfit & Fitness Trainer</h4><ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul></div></article>
+            <article id="remy_tobin"><div><h3>Rémy <span style="text-transform: uppercase;">Tobin</span></h3><h4>Crossfit & Fitness Trainer</h4><ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul></div></article>
+            <article id="eglantine_laroche"><div><h3>Églantine <span style="text-transform: uppercase;">Laroche</span></h3><h4>Fitness Trainer</h4><ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul></div></article>
+            </div>
         </section>
 
         <section class="testimonials">
