modifs testimoniaux & cta

--- a/index.html
+++ b/index.html
@@ -72,51 +72,66 @@
             </ul>
             </div>
             </article>
-            <article id="julia_modiano"><div><h3>Julia <span style="text-transform: uppercase;">Modiano</span></h3><h4>Crossfit & Fitness Trainer</h4><ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul></div></article>
-            <article id="remy_tobin"><div><h3>Rémy <span style="text-transform: uppercase;">Tobin</span></h3><h4>Crossfit & Fitness Trainer</h4><ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul></div></article>
-            <article id="eglantine_laroche"><div><h3>Églantine <span style="text-transform: uppercase;">Laroche</span></h3><h4>Fitness Trainer</h4><ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul></div></article>
+            <article id="julia_modiano"><div><h3>Julia <span style="text-transform: uppercase;">Modiano</span></h3><h4>Crossfit & Fitness Trainer</h4>
+            <ul class="social_ico_coaches">
+                <li><img src="ico/fb.png" width="40px"/></li>
+                <li><img src="ico/tw.png" width="40px"/></li>
+                <li><img src="ico/ig.png" width="40px"/></li>
+                <li><img src="ico/tk.png" width="40px"/></li>
+            </ul>
+            </div>
+            </article>
+            <article id="remy_tobin"><div><h3>Rémy <span style="text-transform: uppercase;">Tobin</span></h3><h4>Crossfit & Fitness Trainer</h4>
+            <ul class="social_ico_coaches">
+                <li><img src="ico/fb.png" width="40px"/></li>
+                <li><img src="ico/tw.png" width="40px"/></li>
+                <li><img src="ico/ig.png" width="40px"/></li>
+                <li><img src="ico/tk.png" width="40px"/></li>
+            </ul>
+            </div>
+            </article>
+            <article id="eglantine_laroche"><div><h3>Églantine <span style="text-transform: uppercase;">Laroche</span></h3><h4>Fitness Trainer</h4>
+            <ul class="social_ico_coaches">
+                <li><img src="ico/fb.png" width="40px"/></li>
+                <li><img src="ico/tw.png" width="40px"/></li>
+                <li><img src="ico/ig.png" width="40px"/></li>
+                <li><img src="ico/tk.png" width="40px"/></li>
+            </ul>
+            </div>
+            </article>
             </div>
         </section>
 
         <section class="testimonials">
+            <h2>Avis Clients</h2>
+            <div class="flex_3">
             <article>
                 <ul>
                     <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
-                    <li><p>Anaïs <span style="text-transform:uppercase">Laurent</span></p></li>
+                    <li><p><img class="round" src="images/anais_laurent.jpg" height="60px" alt="Anaïs Laurent"/>Anaïs <span style="text-transform:uppercase">Laurent</span></p></li>
                 </ul>
             </article>
             <article>
                 <ul>
                     <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></li>
-                    <li><p>Graziella <span style="text-transform:uppercase">Ricci</span></p></li>
+                    <li><p><img class="round" src="images/graziella_ricci.jpg" height="60px" alt="Graziella Ricci"/>Graziella <span style="text-transform:uppercase">Ricci</span></p></li>
                 </ul>
             </article>
             <article>
                 <ul>
                     <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
-                    <li><p>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
+                    <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
                 </ul>
             </article>
+            </div>
         </section>
 
         <section class="calltoaction">
+        <div>
             <h2>Surpassez vos limites dès maintenant !</h2>
             <h3>Passez à l'action en profitant de nos offres taillées selon vos besoins</h3>
+        </div>
+        <div class="cta_btn_section">Inscrivez-vous maintenant !</div>
         </section>
 
         <section class="arguments">
