modif index.html

--- a/index.html
+++ b/index.html
@@ -3,108 +3,120 @@
     <head>
         <meta charset="utf-8" content="text/html">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     </head>
     <body>
-        <header>
-            <div class="logo">
-                <img src="images/logo_fitnessyello.png" height="70px" alt="fitnessyello_logo"/>
-            </div>
-            <nav>
-                <ul>
-                    <li>Activités</li>
-                    <li>Coaches</li>
-                    <li>Formules</li>
-                    <li>Contact</li>
-                    <li>Actualité</li>
-                </ul>
-            </nav>
-            <div class="cta_header">
-                <div id="cta_btn">Testez une séance gratuite</div>
-                <div id="phone_number">📞 06.12.34.56.78</div>
-            </div>
-        </header>
-        <div class="clear"></div>   
-        <section class="home_banner">
-            <div class="banner_box">
-                <h1>Un esprit sain dans un corps sain</h1>
-                <h2>Maintenez votre forme toute l'année chez Fitness Yello !</h2>
-                <p>Auctor sem massa mattis sem at interdum magna augue eget diam
-                    vestibulum ante ipsum primis in faucibus orci luctus.</p>
-                <a href="#" class="btn_orange">Je teste une séance gratuite</a>
-                <a href="#" class="btn_blue">Voir nos activités</a>
-            </div>
-        </section>
+        
+<!-- Menu Desktop -->
 
-        <section class="activities">
-                <h2 style="text-align: center;">Nos activités</h2>
-                <div class="flex_3">
-                <article>
-                    <div class="img_activite"><img src="images/boxe_activite.jpg" alt="boxe" height="300px" width="100%" /></div>
-                    <div class="box_contain">
-                    <h3>Boxe</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
-                </article>
-                <article>
-                    <div class="img_activite"><img src="images/fitness_activite.jpg" alt="boxe" height="300px" width="100%"/></div>
-                    <div class="box_contain">
-                    <h3>Fitness</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
-                </article>
-                <article>
-                    <div class="img_activite"><img src="images/crossfit_activite.jpg" alt="boxe" height="300px" width="100%"/></div>
-                    <div class="box_contain">
-                    <h3>Crossfit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
-                </article>
-                </div>
+<section>
+    <header>
+        <div class="flex_grid">
+            <div class="grid_1_3" id="logo">
+                <a href="index.html" alt="Accueil"><img src="images/logo_fitnessyello.png" height="90px" alt="fitnessyello_logo"/></a>
             </div>
-        </section>
+            <div class="grid_2_3">
+                <nav>
+                    <ul>
+                        <li><a href="#">Activités</a></li>
+                        <li><a href="#">Coachs</a></li>
+                        <li><a href="#">Formules</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Actualité</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="grid_1_3">
+                <button>Testez une séance gratuite</button>
+                <div class="phone_number"><i class="fas fa-phone-alt"></i> 06.12.34.56.78</div>
+            </div>
+        </div> 
+    </header>
+</section>
 
-        <section class="coaches">
-            <h2>Nos coaches</h2>
-            <div class="grid_coaches">
-            <article id="jerome_mazuret"><div><h3>Jérôme <span style="text-transform: uppercase;">Mazuret</span></h3><h4>Musculation & Boxe Trainer</h4>
-            <ul class="social_ico_coaches">
-                <li><img src="ico/fb.png" width="40px"/></li>
-                <li><img src="ico/tw.png" width="40px"/></li>
-                <li><img src="ico/ig.png" width="40px"/></li>
-                <li><img src="ico/tk.png" width="40px"/></li>
-            </ul>
-            </div>
-            </article>
-            <article id="julia_modiano"><div><h3>Julia <span style="text-transform: uppercase;">Modiano</span></h3><h4>Crossfit & Fitness Trainer</h4>
-            <ul class="social_ico_coaches">
-                <li><img src="ico/fb.png" width="40px"/></li>
-                <li><img src="ico/tw.png" width="40px"/></li>
-                <li><img src="ico/ig.png" width="40px"/></li>
-                <li><img src="ico/tk.png" width="40px"/></li>
-            </ul>
-            </div>
-            </article>
-            <article id="remy_tobin"><div><h3>Rémy <span style="text-transform: uppercase;">Tobin</span></h3><h4>Crossfit & Fitness Trainer</h4>
-            <ul class="social_ico_coaches">
-                <li><img src="ico/fb.png" width="40px"/></li>
-                <li><img src="ico/tw.png" width="40px"/></li>
-                <li><img src="ico/ig.png" width="40px"/></li>
-                <li><img src="ico/tk.png" width="40px"/></li>
-            </ul>
-            </div>
-            </article>
-            <article id="eglantine_laroche"><div><h3>Églantine <span style="text-transform: uppercase;">Laroche</span></h3><h4>Fitness Trainer</h4>
-            <ul class="social_ico_coaches">
-                <li><img src="ico/fb.png" width="40px"/></li>
-                <li><img src="ico/tw.png" width="40px"/></li>
-                <li><img src="ico/ig.png" width="40px"/></li>
-                <li><img src="ico/tk.png" width="40px"/></li>
-            </ul>
-            </div>
-            </article>
-            </div>
-        </section>
+<!-- Clear -->
+<div class="clear"></div>
 
+<!-- Section hero -->
+         
+<section class="home_banner">
+    <div class="banner_box">
+        <h1>Un esprit sain dans un corps sain</h1>
+        <h2>Maintenez votre forme toute l'année<br/>chez Fitness Yello !</h2>
+        <button class="test">Je teste une séance gratuite</button>
+        <p style="margin-top:1em"><i>Offre à durée limitée !</i></p>
+    </div>
+    <div class="circle"></div>
+</section>
+
+<!-- Section activités -->
+<section class="activities">
+    <h2 style="text-align: center;">Nos activités</h2>
+    <div class="flex_3">
+        <article>
+            <div class="img_activite" id="boxe_img"></div>
+            <div class="box_contain">
+            <h3>Boxe</h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
+        </article>
+        <article>
+            <div class="img_activite" id="fitness_img"></div>
+            <div class="box_contain">
+            <h3>Fitness</h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
+        </article>
+        <article>
+            <div class="img_activite" id="crossfit_img"></div>
+            <div class="box_contain">
+            <h3>Crossfit</h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div>
+        </article>
+    </div>
+</section>
+
+<!-- Section coachs -->
+<section class="coaches">
+    <h2>Nos coaches</h2>
+    <div class="grid_coaches">
+        <article>
+            <div class="img_coach" id="jerome_mazuret"></div>
+            <div>
+                <h3>Jérôme <span style="text-transform: uppercase;">Mazuret</span></h3>
+                <h4>Musculation & Boxe Trainer</h4>
+            </div>
+        </article>
+
+        <article>
+            <div class="img_coach" id="julia_modiano"></div>
+            <div>
+                <h3>Julia <span style="text-transform: uppercase;">Modiano</span></h3>
+                <h4>Crossfit & Fitness Trainer</h4>
+            </div>
+        </article>
+
+        <article>
+            <div class="img_coach" id="remy_tobin"></div>
+            <div>
+                <h3>Rémy <span style="text-transform: uppercase;">Tobin</span></h3>
+                <h4>Crossfit & Fitness Trainer</h4>
+            </div>
+        </article>
+
+        <article>
+            <div class="img_coach" id="eglantine_laroche"></div>
+            <div>
+                <h3>Églantine <span style="text-transform: uppercase;">Laroche</span></h3>
+                <h4>Fitness Trainer</h4>
+            </div>
+        </article>
+
+    </div>
+</section>
+
+<!-- Section avis clients-->
         <section class="testimonials">
             <h2>Avis Clients</h2>
-            <div class="flex_3">
+            <div class="scrolling_wrapper_testimonials">
             <article>
                 <ul>
                     <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
@@ -123,9 +135,16 @@
                     <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
                 </ul>
             </article>
+            <article>
+                <ul>
+                    <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
+                    <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
+                </ul>
+            </article>
             </div>
         </section>
 
+<!-- Section CTA-->
         <section class="calltoaction">
         <div>
             <h2>Surpassez vos limites dès maintenant !</h2>
@@ -145,6 +164,7 @@
             </ul>
         </section>
 
+<!-- Section offres-->
         <section class="offers">
             <h2>Nos offres</h2>
             <article>
@@ -170,6 +190,7 @@
             </article>
         </section>
 
+<!-- Section contact -->
         <section class="contact">
             <h2>Contactez-nous !</h2>
             <div>
@@ -199,6 +220,7 @@
             </div>
         </section>
 
+<!-- Footer -->
         <footer>
             <h2>Nous suivre sur les réseaux sociaux</h2>
             <nav>
