--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <body>
         
 <!-- Menu Desktop -->
-<section>
-<div class="useful_margin">
-    <header>
+<header>
+    <div class="useful_margin">
         <div class="flex_grid">
             <div class="grid_1_3" id="logo">
                 <a href="index.html" alt="Accueil"><img src="images/logo_fitnessyello.png" height="90px" alt="fitnessyello_logo"/></a>
@@ -19,42 +18,44 @@
             <div class="grid_2_3">
                 <nav>
                     <ul>
-                        <li><a href="#">Activités</a></li>
-                        <li><a href="#">Coachs</a></li>
-                        <li><a href="#">Formules</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#activites">Activités</a></li>
+                        <li><a href="#coach">Coachs</a></li>
+                        <li><a href="#offres">Formules</a></li>
+                        <li><a href="#message">Contact</a></li>
                         <li><a href="#">Actualité</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="grid_1_3">
-                <button>Tester une séance gratuite</button>
+                <a href="#offres"><button>Tester une séance gratuite</button></a>
                 <div class="phone_number"><i class="fas fa-phone-alt"></i> 06.12.34.56.78</div>
             </div>
         </div> 
-    </header>
-</div>
-</section>
+    </div>
+</header>
 
 <!-- Clear -->
 <div class="clear"></div>
 
 <!-- Section hero -->
-<div class="useful_margin">      
 <section class="home_banner">
-    <div class="banner_box">
-        <h1>Un esprit sain dans un corps sain</h1>
-        <h2>Gardez la forme toute l'année<br/>chez Fitness Yello !</h2>
-        <button class="test">Tester une séance gratuite</button>
-        <p style="margin-top:1em"><i>Offre à durée limitée !</i></p>
+    <video id="vid" video autobuffer autoplay muted loop>
+        <source id="mp4" src="medias/video_hero.mp4" type="video/mp4">
+    </video>
+    <div class="useful_margin">      
+        <div class="banner_box">
+            <div>
+                <h1>Un esprit sain dans un corps sain</h1>
+                <h2>Gardez la forme toute l'année<br/>chez Fitness Yello !</h2>
+                <a href="#offres"><button class="test">Tester une séance gratuite</button></a>
+                <p style="margin-top:1em"><i>Offre à durée limitée !</i></p>
+            </div>
+        </div>
     </div>
 </section>
-</div>
-<div class="useful_margin">
-    <div class="circle"></div>
-</div>
+
 <!-- Section activités -->
-<section class="activities">
+<section class="activities" id="activites">
 <div class="useful_margin"> 
     <h2 style="text-align: center;">Nos activités</h2>
     <div class="flex_3">
@@ -82,7 +83,7 @@
 
 
 <!-- Section coachs -->
-<section class="coaches">
+<section class="coaches" id="coach">
 <div class="useful_margin"> 
     <h2>Nos coaches</h2>
     <div class="grid_coaches">
@@ -134,44 +135,44 @@
     <div class="scrolling_wrapper_testimonials">
     <article>
         <ul>
-            <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
+            <li><p>Je suis très satisfaite, les prix sont bons par rapport au niveau de qualité des prestations</p></li>
             <li><p><img class="round" src="images/anais_laurent.jpg" height="60px" alt="Anaïs Laurent"/>Anaïs <span style="text-transform:uppercase">Laurent</span></p></li>
         </ul>
     </article>
     <article>
         <ul>
-            <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></li>
+            <li><p>Cela fait 1 an que je suis abonnée chez Fitness Yello. J'apprécie notamment le niveau de service et la qualité des cours, c'est grâce à cette belle équipe que ma motivation remonte à bloc !! Merci à toute la team Fitness Yello 😃</p></li>
             <li><p><img class="round" src="images/graziella_ricci.jpg" height="60px" alt="Graziella Ricci"/>Graziella <span style="text-transform:uppercase">Ricci</span></p></li>
         </ul>
     </article>
     <article>
         <ul>
-            <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
+            <li><p>La salle est propore rien à dire. Les machines et le matériel fitness sont top 👍</p></li>
             <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
         </ul>
     </article>
     <article>
         <ul>
-            <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
-            <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
+            <li><p>Plus que jamais motivé pour me remettre en forme avec Fitness Yello 💯</p></li>
+            <li><p><img class="round" src="images/laurent_marchand.jpg" height="60px" alt="Laurent Marchand"/>Laurent <span style="text-transform:uppercase">Marchand</span></p></li>
         </ul>
     </article>
     <article>
         <ul>
-            <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
-            <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
+            <li><p>J'ai rarement vu une salle aussi grande, propre et avec autant de matériel disponible pour tout le monde. En effet, il y a peu d'attente pour occuper un emplacement ou une machine !!</p></li>
+            <li><p><img class="round" src="images/julie_bartoli.jpg" height="60px" alt="Julie Traoré"/>Julie <span style="text-transform:uppercase">Bartoli</span></p></li>
         </ul>
     </article>
     <article>
         <ul>
-            <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
-            <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
+            <li><p>J'adore retrouver mes amis après le taf pour faire quelques exercices. Cette salle m'a redonné goût au sport pour un prix compétitif !</p></li>
+            <li><p><img class="round" src="images/damien_traore.jpg" height="60px" alt="Damien Traoré"/>Damien <span style="text-transform:uppercase">Traoré</span></p></li>
         </ul>
     </article>
     <article>
         <ul>
-            <li><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p></li>
-            <li><p><img class="round" src="images/sumalee_kular.jpg" height="60px" alt="Sumalee Kular"/>Sumalee <span style="text-transform:uppercase">Kular</span></p></li>
+            <li><p>Wow ! J'ai énormément progressé en 6 mois et 3 séances assidues par semaine. Je dois une fière chandelle à cette belle équipe très compétente et sympathique 🙂</p></li>
+            <li><p><img class="round" src="images/hamza_achour.jpg" height="60px" alt="Hamza Achour"/>Hamza <span style="text-transform:uppercase">Achour</span></p></li>
         </ul>
     </article>
     </div>
@@ -204,7 +205,7 @@
 </section>
 
 <!-- Section offres-->
-<section class="offers">
+<section class="offers" id="offres">
 <div class="useful_margin"> 
     <h2>Nos offres</h2>
     <p>Choisissez la formule qui vous convient le mieux</p>
@@ -245,7 +246,7 @@
 </section>
 
 <!-- Section contact -->
-<section class="contact">
+<section class="contact" id="message">
 <div class="useful_margin"> 
     <h2>Contactez-nous !</h2>
     <div class="flex_2">
@@ -306,22 +307,26 @@
 <!-- Footer -->
 <footer>
 <div class="useful_margin">
-    <div>
-        <nav class="nav_footer">
+    <div class="flex_2">
+        <div>
+            <nav class="nav_footer">
+                <ul>
+                    <li>Activités</li>
+                    <li>Coaches</li>
+                    <li>Formules</li>
+                    <li>Contact</li>
+                    <li>Actualité</li>
+                </ul>
+            </nav>
+        </div>
+        <div class="social_block">
             <ul>
-                <li>Activités</li>
-                <li>Coaches</li>
-                <li>Formules</li>
-                <li>Contact</li>
-                <li>Actualité</li>
+                <li><h2>Nous suivre sur les réseaux sociaux</h2></li>
+                <li><i class="fab fa-facebook-square"></i></li>
+                <li><i class="fab fa-twitter-square"></i></li>
+                <li><i class="fab fa-instagram-square"></i></li>
             </ul>
-        </nav>
-    </div>
-    <div class="social_block">
-        <ul>
-            <li><h2>Nous suivre sur les réseaux sociaux</h2></li>
-            <li><div class="social_icns"><i class="fab fa-facebook-square"></i><i class="fab fa-twitter-square"></i><i class="fab fa-instagram-square"></i></div></li>
-        </ul>
+        </div>
     </div>
 </div>
 <div class="useful_margin">
@@ -348,16 +353,28 @@
 
 <!-- Script -->
 <script>
-    $('#scroll_left').on('click', function() {
-  $('.scrolling_wrapper_testimonials').animate({
-    scrollLeft: '-=500'
-  }, 300, 'swing');
+$('#scroll_left').on('click', function() {
+    if (window.matchMedia("(max-width: 767px)").matches) {
+        $('.scrolling_wrapper_testimonials').animate({
+        scrollLeft: '-=300'
+        }, 500, 'swing');
+    } else {
+        $('.scrolling_wrapper_testimonials').animate({
+        scrollLeft: '-=600'
+        }, 500, 'swing');
+    }
 });
 
 $('#scroll_right').on('click', function() {
-  $('.scrolling_wrapper_testimonials').animate({
-    scrollLeft: '+=500'
-  }, 300, 'swing');
+    if (window.matchMedia("(max-width: 767px").matches){
+        $('.scrolling_wrapper_testimonials').animate({
+        scrollLeft: '+=300'
+        }, 500, 'swing');
+    } else {
+        $('.scrolling_wrapper_testimonials').animate({
+        scrollLeft: '+=600'
+        }, 500, 'swing');
+    }
 });
 
 var scrollToTopBtn = document.querySelector(".scrollToTopBtn")
@@ -384,6 +401,9 @@ function scrollToTop() {
 }
 scrollToTopBtn.addEventListener("click", scrollToTop)
 document.addEventListener("scroll", handleScroll)
+
+var vid = document.getElementById("vid");
+vid.playbackRate = 0.75;
 
 </script>
 </body>
