modif section coach

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="grid_coaches">
         <article>
             <div class="img_coach" id="jerome_mazuret"></div>
-            <div>
+            <div class="coach_name">
                 <h3>Jérôme <span style="text-transform: uppercase;">Mazuret</span></h3>
                 <h4>Musculation & Boxe Trainer</h4>
             </div>
@@ -113,7 +113,7 @@
 
         <article>
             <div class="img_coach" id="julia_modiano"></div>
-            <div>
+            <div class="coach_name">
                 <h3>Julia <span style="text-transform: uppercase;">Modiano</span></h3>
                 <h4>Crossfit & Fitness Trainer</h4>
             </div>
@@ -121,7 +121,7 @@
 
         <article>
             <div class="img_coach" id="remy_tobin"></div>
-            <div>
+            <div class="coach_name">
                 <h3>Rémy <span style="text-transform: uppercase;">Tobin</span></h3>
                 <h4>Crossfit & Fitness Trainer</h4>
             </div>
@@ -129,7 +129,7 @@
 
         <article>
             <div class="img_coach" id="eglantine_laroche"></div>
-            <div>
+            <div class="coach_name">
                 <h3>Églantine <span style="text-transform: uppercase;">Laroche</span></h3>
                 <h4>Fitness Trainer</h4>
             </div>
