modif transform css coach

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="img_coach" id="jerome_mazuret"></div>
             <div class="coach_name">
                 <h3>Jérôme <span style="text-transform: uppercase;">Mazuret</span></h3>
-                <h4>Musculation & Boxe Trainer</h4>
+                <h4>Musculation/Boxe Trainer</h4>
             </div>
         </article>
 
@@ -115,7 +115,7 @@
             <div class="img_coach" id="julia_modiano"></div>
             <div class="coach_name">
                 <h3>Julia <span style="text-transform: uppercase;">Modiano</span></h3>
-                <h4>Crossfit & Fitness Trainer</h4>
+                <h4>Crossfit/fitness Trainer</h4>
             </div>
         </article>
 
@@ -123,7 +123,7 @@
             <div class="img_coach" id="remy_tobin"></div>
             <div class="coach_name">
                 <h3>Rémy <span style="text-transform: uppercase;">Tobin</span></h3>
-                <h4>Crossfit & Fitness Trainer</h4>
+                <h4>Crossfit/fitness Trainer</h4>
             </div>
         </article>
 
